# adapterly

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adapterly-cli/: pyproject.toml
adapterly-cli/src/adapterly_cli/: __init__.py  client.py  config.py  main.py
adapterly-gateway/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
adapterly-gateway/gateway/: __init__.py  cli.py  config.py  database.py  main.py  mcp_server.py
adapterly-gateway/tests/: conftest.py  test_auth.py  test_config.py  test_diagnostics.py  test_executor.py  test_mcp_server.py
adapters/: _template.yaml
adapters/construction/: aiforsite.yaml
alembic/: env.py
apps/accounts/: urls.py  views.py
apps/gateways/: admin.py  apps.py  models.py  urls.py
apps/mcp/: admin.py  models.py  project_views.py  server.py  views.py
apps/oauth/: models.py  urls.py  views.py
apps/systems/: adapter_loader.py  admin.py  models.py  views.py
config/: settings.py  urls.py
docs/: ACTION_TESTING.md  XHR_AUTHENTICATION.md
fastapi_app/: crypto.py  dependencies.py  main.py
fastapi_app/mcp/: server.py
fastapi_app/models/: __init__.py  accounts.py  base.py  clients.py  mcp.py  (+1 more)
gateway_core/: __init__.py  auth.py  config.py  crypto.py  diagnostics.py  executor.py  models.py
tests/: conftest.py  test_api_integrations.py  test_api_workspaces.py  test_crypto.py  test_executor.py  test_health.py  test_mcp.py  test_models.py  test_permissions.py
(+176 files in other folders)
