[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adapterly"
version = "2.0.0"
description = "Adapterly – Managed integrations for AI agents (MCP)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "cryptography>=43.0",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "nanoid>=2.0",
    "stripe>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",  # for TestClient
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adapterly"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
